les autre model comme svm de ml et ngramme

--- a/notebooks/vocabulary_process.ipynb
+++ b/notebooks/vocabulary_process.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +163,59 @@
    ],
    "source": [
     "# Fonction de prétraitement basique\n",
-    "def preprocess_text(text):\n",
+    "def preprocess_text_improved(text):\n",
     "    # Conversion en minuscules\n",
     "    text = text.lower()\n",
-    "    # Suppression de la ponctuation et caractères spéciaux\n",
-    "    text = re.sub(r'[^\\w\\s]', ' ', text)\n",
-    "    # Suppression des espaces multiples\n",
+    "    \n",
+    "    # Traitement des URLs - remplacer par un token spécial\n",
+    "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', ' URL ', text)\n",
+    "    \n",
+    "    # Traitement des mentions - remplacer par un token spécial\n",
+    "    text = re.sub(r'@\\w+', ' MENTION ', text)\n",
+    "    \n",
+    "    # Extraire les hashtags (préserver le contenu mais marquer comme hashtag)\n",
+    "    hashtags = re.findall(r'#(\\w+)', text)\n",
+    "    # Remplacer les hashtags dans le texte\n",
+    "    text = re.sub(r'#\\w+', ' ', text)\n",
+    "    # Ajouter les contenus des hashtags comme mots normaux\n",
+    "    for tag in hashtags:\n",
+    "        text += ' ' + tag\n",
+    "    \n",
+    "    # Traitement des émojis courants par des tokens\n",
+    "    emoji_pattern = re.compile(\"[\"\n",
+    "                               u\"\\U0001F600-\\U0001F64F\"  # émoticonnes\n",
+    "                               u\"\\U0001F300-\\U0001F5FF\"  # symboles et pictogrammes\n",
+    "                               u\"\\U0001F680-\\U0001F6FF\"  # transport et symboles\n",
+    "                               u\"\\U0001F700-\\U0001F77F\"  # symboles alchimiques\n",
+    "                               u\"\\U0001F780-\\U0001F7FF\"  # symboles géométriques\n",
+    "                               u\"\\U0001F800-\\U0001F8FF\"  # symboles supplémentaires\n",
+    "                               u\"\\U0001F900-\\U0001F9FF\"  # symboles supplémentaires et pictogrammes\n",
+    "                               u\"\\U0001FA00-\\U0001FA6F\"  # symboles de jeu\n",
+    "                               u\"\\U0001FA70-\\U0001FAFF\"  # symboles supplémentaires\n",
+    "                               u\"\\U00002702-\\U000027B0\"  # dingbats\n",
+    "                               u\"\\U000024C2-\\U0001F251\" \n",
+    "                               \"]+\", flags=re.UNICODE)\n",
+    "    \n",
+    "    # Remplacer les émojis par des tokens\n",
+    "    text = emoji_pattern.sub(r' EMOJI ', text)\n",
+    "    \n",
+    "    # Traitement des émoticônes basiques\n",
+    "    text = re.sub(r'(?::|;|=)(?:-)?(?:\\)|\\(|D|P)', ' EMOTICON ', text)\n",
+    "    \n",
+    "    # Préservation des négations (important pour le sentiment)\n",
+    "    text = re.sub(r'ne pas', 'ne_pas', text)\n",
+    "    text = re.sub(r\"n'est pas\", 'n_est_pas', text)\n",
+    "    text = re.sub(r'pas', 'pas', text)  # préserver \"pas\" comme un mot important\n",
+    "    \n",
+    "    # Suppression de la ponctuation tout en préservant les tirets dans les mots\n",
+    "    text = re.sub(r'[^\\w\\s\\-]', ' ', text)\n",
+    "    \n",
+    "    # Suppression des chiffres isolés mais pas dans les mots\n",
+    "    text = re.sub(r'\\b\\d+\\b', ' NUM ', text)\n",
+    "    \n",
+    "    # Normalisation des espaces\n",
     "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "    \n",
     "    return text\n",
     "\n",
     "# Testons le prétraitement sur quelques exemples\n",
@@ -187,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
